@@ -7,6 +7,7 @@
 
 	* nnimap.el (nnimap-unfold-quoted-lines): Refactor out.
 	(nnimap-last-response-string): Unfold quoted lines, if they exist.
+	(nnimap-last-response-string): Fix last unfolding fix.
 
 2010-11-25  Katsumi Yamaoka  <yamaoka@jpl.org>
 
